<resources>
    <string name="app_name">YourWay</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_preferences">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settingshelp -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string name="moviecast_directions_api_key" translatable="false">ee5dcca8-71c5-4679-b81a-5744b1e87a31</string>

    <!-- Example settingshelp for Data & Sync -->
    <string name="pref_header_data_sync">Data and sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settingshelp for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="confirm_button"> Got it</string>
    <string name="hello_blank_fragment">
        <b>Map:</b>\n
        In this application you can walk a route.
        You can select this in the menu what you can open with the button in the left corner\n\n

        <b>Map:</b>\n
        The map gives all the possible points you can visit with the routes.
        If you click one you get information.
        It also displays the routes after you select one in routes.\n\n

        <b>Routes:</b>\n
        In the route selector you can select or reset a route.
        The routes will continue where you left it of.\n\n

        <b>Sights:</b>\n
        You can see a list of sights and get more detailed information from the sights.\n\n

        <b>Settings:</b>\n
        You can change the settings here. Like if you want it to vibrate.

    </string>

    <string name="mapText">
        <b>Map:</b>\n
        In this application you can walk a route on the map. You can see all the points you can visit. Different colors are different routes.
    </string>

    <string name="menuText1">
        <b>Menu:</b>\n
        First open the menu.
    </string>

    <string name="menuText2">
        After you opened the menu. You can select route to start a route. If you want to see the sights you can visit, choose sights.
    </string>

    <string name="routeText">
        <b>Route:</b>\n
        In the route selector you can select or reset a route.
        The routes will continue where you left it of.
    </string>

    <string name="sightText">
        <b>Sights:</b>\n
         You can see a list of sights and get more detailed information from the sights.
    </string>

    <string name="settingText">
        <b>Settings:</b>\n
         You can decide if the phone vibrates when you are near a sight.
    </string>

    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="HeaderName">Henk</string>
    <string name="Kleurenblind">Colourblind</string>
    <string name="Vibrate">Vibrate</string>

    <string name="map">Map</string>
    <string name="route">Route</string>
    <string name="Sight">Sight</string>
    <string name="Settings">Settings</string>
    <string name="Help">Help</string>


    <string name="year">Year: </string>
    <string name="author">Author: </string>
    <string name="photographer">Photographer: </string>
    <string name="mapFragmentTitle">Map</string>
    <string name="routesFragmentTitle">Routes</string>
    <string name="sightFragmentTitle">Sights</string>
    <string name="feedbackOnGpsLost">GPS Connection Lost</string>
    <string name="feedbackOnInternetLost">Internet Connection Lost</string>
    <string name="feedbackOnRouteFinish">Congratulations! You have finished the route!</string>
    <string name="feedbackOnRouteReset">The progress of this route has been reset</string>
    <string name="mapPauseButton">Pause</string>
    <string name="mapResumeButton">Resume</string>
</resources>
