<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="none"
        android:id="@+id/top_group_drawer">
        <item
            android:icon="@drawable/maps"
            android:id="@+id/maps_item"
            android:title="@string/map" />
        <item
            android:icon="@drawable/routes"
            android:id="@+id/routes_item"
            android:title="@string/route" />
        <item
            android:icon="@drawable/eye"
            android:id="@+id/sight_item"
            android:title="@string/Sight" />
        <item
            android:icon="@drawable/settings"
            android:id="@+id/settings_item"
            android:title="@string/Settings" />
        <item
            android:icon="@drawable/help"
            android:id="@+id/help_item"
            android:title="@string/Help" />
    </group>
</menu>