<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true"
        >

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            android:fitsSystemWindows="true"
            >

            <!--<ImageView-->
                <!--android:id="@+id/project_image"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="350dp"-->
                <!--android:contentDescription="@string/app_name"-->
                <!--android:scaleType="centerCrop"-->
                <!--android:src="@drawable/logo"-->
                <!--app:layout_collapseMode="parallax" />-->

            <android.support.v4.view.ViewPager
                android:id="@+id/detailledviewPagerID"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:scaleType="centerCrop"
                android:src="@drawable/logo"
                app:layout_collapseMode="parallax" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_detail"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:title="TEst"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.CollapsingToolbarLayout>

</android.support.design.widget.AppBarLayout>

<android.support.v4.widget.NestedScrollView
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:orientation="vertical"
        android:padding="18dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/staticyear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/year" />

            <TextView
                android:id="@+id/detailedActivity_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="1999"
                android:textSize="16dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/staticauthor"
                android:layout_width="122dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/author" />

            <TextView
                android:id="@+id/detailedActivity_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Bennie Cornellisen"
                android:textSize="16dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/staticphotographer"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/photographer" />

            <TextView
                android:id="@+id/detailedActivity_photographer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Ralph Rouwen"
                android:textSize="16dp" />
        </LinearLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorAccent" />

        <TextView
            android:id="@+id/detailedActivity_muralDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="De Essteling wil een set kleinere applicaties ontwikkelen die bij bezoekers uiteenlopende,
maar altijd positieve, belevingen kunnen oproepen. Op termijn wil de Essteling voor alle
leeftijdscategorieën beschikken over dergelijke attracties. Daarbij wil de Essteling ook een
aantal attracties voor gehandicapte mensen ontwikkelen. De thema’s van de attracties zijn
zo afwisselend mogelijk en sluiten aan op de visie van het pretpark om de interactie tussen
mensen, en de interactie tussen mens en omgeving te stimuleren.
Om de toegankelijkheid voor de bezoekers zo groot mogelijk te maken is gekozen voor het
‘mobile first’ principe: de attractie wordt in eerste instantie ontwikkeld als ‘mobile application’
(voor Android smartphones).
De Essteling heeft de opleiding Technische Informatica gevraagd om op basis van deze
technologie een aantal nieuwe innovatieve concepten te ontwikkelen en daarbij een proof-ofconcept
te realiseren.
De opleiding heeft besloten om studenten uit de vierde periode van de propedeuse deze
opdracht te laten uitvoeren. Elke profgroep ontwikkelt daarbij één nieuw concept en
realiseert een proof-of-concept. "
            android:textSize="14sp" />




    </LinearLayout>
</android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>